--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
   <p>
     Welcome to {{ title }}. {{tagline}}
   </p>
+  <img id="logo" src="http://i1378.photobucket.com/albums/ah90/pingtingpt/LOGO_zps32dbd7f1.png">
   <p>
     Check out the <a href="/about">About us</a> page
     as well as the <a href="/events">Events</a> page.
