--- a/views/layout.html
+++ b/views/layout.html
@@ -9,7 +9,10 @@
 	<body class="container">
 
     {% block header %}
-      <header>Hey, I'm in the header</header>
+      <header>
+        <img id="logo" src="http://i1378.photobucket.com/albums/ah90/pingtingpt/LOGO_zps32dbd7f1.png">
+        EVENTOTTER
+      </header>
     {% endblock %}
 
     {% block mainContent %}
