--- a/views/layout.html
+++ b/views/layout.html
@@ -11,7 +11,7 @@
     {% block header %}
       <header>
         <img id="logo" src="http://i1378.photobucket.com/albums/ah90/pingtingpt/LOGO_zps32dbd7f1.png">
-        EVENTOTTER
+        EventOtter
       </header>
     {% endblock %}
 
