--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,7 @@ header {
 }
 
 footer {
-  background-color: #eee;
+  background-color: #D8F6CE;
   padding: 1em;
   border: 1px soid #ddd;
   margin: 2em 0;
