--- a/views/layout.html
+++ b/views/layout.html
@@ -21,7 +21,7 @@
 
     {% block footer %}
       <footer>
-        <a href='/'>Home</a> &gt; <a href='/about'>About us</a>
+        <a href='/'>Home</a> &gt; <a href='/about'>About us</a> &gt; <a href='/events'>Events</a> &gt; <a href='/events/new'>Create New Event</a>
       </footer>
     {% endblock %}
 
