--- a/views/event-detail.html
+++ b/views/event-detail.html
@@ -12,5 +12,11 @@
     {% for attending in event.attending %}
     {{attending}}<br>
     {% endfor %}
+    
+    <form id="RSVP" method="POST">
+    Please provide your email to RSVP for this event:
+    <input id="email" type="email" name="email">
+    <input type="submit" value="Submit">
+    </form>
 
 {% endblock %}
