add event validators

--- a/views/create-event.html
+++ b/views/create-event.html
@@ -117,7 +117,7 @@
     <select id="minute"
          name="minute" />
         <option>0</option>      
-        <option></option>      
+        <option>30</option>      
     </select> 
     
 
