--- a/views/event-detail.html
+++ b/views/event-detail.html
@@ -13,7 +13,7 @@
     {{attending}}<br>
     {% endfor %}
     
-    <form id="RSVP" method="POST">
+    <form id="rsvp" method="POST">
     Please provide your email to RSVP for this event:
     <input id="email" type="email" name="email">
     <input type="submit" value="Submit">
