--- a/views/layout.html
+++ b/views/layout.html
@@ -33,6 +33,7 @@
 
     {% block footer %}
       <footer>
+        <b><a href='/team-report'>Team Report</a></b><br>
         <a href='/'>Home</a> &gt; <a href='/about'>About us</a> &gt; <a href='/events'>Events</a> &gt; <a href='/events/new'>Create New Events</a>
       </footer>
     {% endblock %}
