team report changed

--- a/views/team-report.html
+++ b/views/team-report.html
@@ -1,6 +1,7 @@
 <html>
     <head><title>This is llg-team's report.</title></head>
     <body>
-        put report content here.
+Team EventOtter (GLL in our profile pages) Sprint 1 Report
+
     </body>
 </html>
