--- a/views/team-report.html
+++ b/views/team-report.html
@@ -2,6 +2,54 @@
     <head><title>This is llg-team's report.</title></head>
     <body>
 Team EventOtter (GLL in our profile pages) Sprint 1 Report
+Xulin Guo(xulin.guo@yale.edu), Pingting Li(pingting.li@yale.edu), Lin Lin(victoria.lin@yale.edu)
+
+Burn down chart
+
+
+Completed stories in this sprint(if any)
+1.As a user,  I can visit your site and it looks awsome: (1)all pages are in  Bootstrap CSS format (2)all pages have a footer with links to homepage and about us
+2.As a user, I can visit the url at /about and see information about your company
+3. As any user, I can visit the url at / and see your homepage, it has (1)Your team logo; (2)A an unordered list of events, including their details;(3)I can click a link to take me to /events/new. The link has id="new"
+4.As a user, I can visit your API at /api/events and retrieve an object with key events containing all events in JSON format.
+
+
+What have been achieved, including roadblocks
+Achieved: 
+Create an API respond in JSON format
+Add span tag with id attribute in About page
+Add headshots in About page
+Add footer to each page with links to Home and About us
+All pages are in Bootstrap CSS format now
+
+
+
+Roadblocks: 
+The test that passed at branch could not pass at master
+How could other team members merge the different team member’s changes
+Deploy branch changes to Heroku
+
+
+Current backlog
+
+add team information and image of each person at "/about"
+add time tags for events at '/'
+add a link to detail page for every event title at '/'
+display events with titles and date
+create team logo
+display team logo at '/'
+search API by keyword in title
+
+
+
+Expected  work before next report
+add team information and image of each person at "/about"
+add time tags for events at '/'
+add a link to detail page for every event title at '/'
+display events with titles and date
+create team logo
+display team logo at '/'
+search API by keyword in title
 
     </body>
 </html>
