--- a/views/team-report.html
+++ b/views/team-report.html
@@ -1,18 +1,24 @@
 <html>
-    <head><title>This is llg-team's report.</title></head>
+    <head>
+        <title>This is llg-team's report.</title>
+    <style>
+        h1{text-align:center;font-size:150%;}
+        h2{font-weight:bold;}
+    </style>
+    </head>
 <body>
 <h1>  Team EventOtter (GLL in our profile pages) Sprint 2 Report</h1>
 
 <p> Xulin Guo(xulin.guo@yale.edu), Pingting Li(pingting.li@yale.edu), Lin Lin(victoria.lin@yale.edu)</p>
-Team EventOtter (GLL in our profile pages) Sprint 2 Report
 
 
+<h2>Burn down chart<h2><br>
 
- Burn down chart<br>
+<img src="http://i1378.photobucket.com/albums/ah90/pingtingpt/burndownchart_zps27e2d8ee.jpg" border="0" alt=" burn down chart"/><br>
 
-<img src="http://i1378.photobucket.com/albums/ah90/pingtingpt/burndownchart_zps27e2d8ee.jpg" border="0" alt=" burn down chart"/>
 
-Completed stories in this sprint(if any)<br>
+<h2>Completed stories in this sprint(if any)</h2><br>
+<p>
 1. As any user, I can visit the url at / and see your homepage, it has (1)Your team logo; (2)A an unordered list of events, including their details;(3)I can click a link to take me to /events/new. The link has id="new"<br>
 2. As a user, I can visit your API at /api/events and retrieve an object with key events containing all events in JSON format.<br>
 3. As a user I can visit your page for creating new events at /events/new<br>
@@ -20,10 +26,11 @@ It should have a form for creating events. The form should have attribute method
 I must specify the following attributes of an event: title, location, image, year, month, day, hour, and minute.<br>
 When submitted, the form should be validated<br>
 If the form was not valid, I am taken back the form and the errors are shown on the form<br>
+</p>
 
 
-
-What have been achieved, including roadblocks<br>
+<h2>What have been achieved, including roadblocks</h2><br>
+<p>
 Achieved: <br>
 Create an API respond in JSON format<br>
 Add span tag with id attribute in About page<br>
@@ -41,38 +48,34 @@ Revise footer with all pages<br>
 Add validation for new event fields<br>
 Create team report link<br>
 Add RSVP field to event detail page<br>
-
-
 Create a form for creating events<br>
 Specify the following attributes of an event: title, location, image, year, month, day, hour, and minute<br>
 Validate the form when submitted<br>
 Show error messages if the form was not valid<br>
+</p>
 
 
-
-Roadblocks: <br>
+<h2>Roadblocks:</h2> <br>
+<p>
 Don’t understand how the forms contents are captured by functions in event controller <br>
 Don’t know how to create an input element to submit the event<br>
 Don’t know why we can’t the pass the About Us test<br>
 Don’t understand why we can’t pass the test “should have appropriate form fields and labels”<br>
-
-Current backlog<br>
-
+</p>
+<br>
+<h2>Current backlog<h2><br>
+<p>
 Create an input element to submit the event. This element should have id="submit" and type="submit".<br>
 Redirect users that submit valid events<br>
+</p>
 
 
-
-Expected  work before next report<br>
+<h2>Expected  work before next report</h2><br>
+<p>
 Complete the last story so that user could RSVP to an event they are interested in<br>
 Beautify the format of the website<br>
-
 Fix the About Page and pass the test<br>
 Fix the event creation page and pass the test on form fields<br>
-Make the website nicer
-
-
-
-
-    </body>
+</p>
+</body>
 </html>
