--- a/views/team-report.html
+++ b/views/team-report.html
@@ -3,7 +3,7 @@
         <title>This is llg-team's report.</title>
     <style>
         h1{text-align:center;font-size:150%;}
-        h2{font-weight:bold;}
+        h2{font-weight:bold;font-size: 100%;}
     </style>
     </head>
 <body>
@@ -63,7 +63,7 @@ Don’t know why we can’t the pass the About Us test<br>
 Don’t understand why we can’t pass the test “should have appropriate form fields and labels”<br>
 </p>
 <br>
-<h2>Current backlog<h2><br>
+<h2>Current backlog</h2><br>
 <p>
 Create an input element to submit the event. This element should have id="submit" and type="submit".<br>
 Redirect users that submit valid events<br>
