--- a/views/index.html
+++ b/views/index.html
@@ -15,13 +15,13 @@
     Events:
     <ul>
     {% for event in events %}
+      {% if event.date > now %} 
       <li class="event" id="event-{{event.id}}">
-        {% if event.date < now %} Expired: <strike> {% endif %}
         <a href="/events/{{event.id}}">{{event.title}}.</a> {{event.attending.length}} attending so far.
-        {% if event.date < now %} </strike> {% endif %}
         <br>
         <time datetime="{{event.date}}">{{event.date|prettyDate}}.</time>
       </li>
+      {% endif %}
     {% endfor %}
 
     </ul>
