--- a/views/team-report.html
+++ b/views/team-report.html
@@ -12,13 +12,12 @@
 <p> Xulin Guo(xulin.guo@yale.edu), Pingting Li(pingting.li@yale.edu), Lin Lin(victoria.lin@yale.edu)</p>
 
 
-<h2>Burn down chart<h2><br>
-
+<h2>Burn down chart<h2>
 <img src="http://i1378.photobucket.com/albums/ah90/pingtingpt/burndownchart_zps27e2d8ee.jpg" border="0" alt=" burn down chart"/><br>
 
-
-<h2>Completed stories in this sprint(if any)</h2><br>
+<br>
 <p>
+<h2>Completed stories in this sprint(if any)</h2>
 1. As any user, I can visit the url at / and see your homepage, it has (1)Your team logo; (2)A an unordered list of events, including their details;(3)I can click a link to take me to /events/new. The link has id="new"<br>
 2. As a user, I can visit your API at /api/events and retrieve an object with key events containing all events in JSON format.<br>
 3. As a user I can visit your page for creating new events at /events/new<br>
@@ -28,9 +27,9 @@ When submitted, the form should be validated<br>
 If the form was not valid, I am taken back the form and the errors are shown on the form<br>
 </p>
 
-
-<h2>What have been achieved, including roadblocks</h2><br>
+<br>
 <p>
+<h2>What have been achieved, including roadblocks</h2>
 Achieved: <br>
 Create an API respond in JSON format<br>
 Add span tag with id attribute in About page<br>
@@ -53,25 +52,23 @@ Specify the following attributes of an event: title, location, image, year, mont
 Validate the form when submitted<br>
 Show error messages if the form was not valid<br>
 </p>
-
-
-<h2>Roadblocks:</h2> <br>
+<br>
 <p>
+<h2>Roadblocks:</h2>
 Don’t understand how the forms contents are captured by functions in event controller <br>
 Don’t know how to create an input element to submit the event<br>
 Don’t know why we can’t the pass the About Us test<br>
 Don’t understand why we can’t pass the test “should have appropriate form fields and labels”<br>
 </p>
 <br>
-<h2>Current backlog</h2><br>
 <p>
+<h2>Current backlog</h2>
 Create an input element to submit the event. This element should have id="submit" and type="submit".<br>
 Redirect users that submit valid events<br>
 </p>
-
-
-<h2>Expected  work before next report</h2><br>
+<br>
 <p>
+<h2>Expected  work before next report</h2>
 Complete the last story so that user could RSVP to an event they are interested in<br>
 Beautify the format of the website<br>
 Fix the About Page and pass the test<br>
