--- a/views/about.html
+++ b/views/about.html
@@ -3,15 +3,15 @@
 {% block mainContent %}
   <p> <span style="font-size: 150%;">About us</span></p>
 
-<p id="doubtful frog"> <span style="color: black; font-weight: bold;"> Xulin Guo </span> 
+<p > <span style="color: black; font-weight: bold;" id="doubtful frog-name"> Xulin Guo </span> 
 <img id="{doubtful frog}-headshot" src="http://www.search-best-cartoon.com/cartoon-frogs/cartoon-frog-29.jpg" alt="Xulin Guo" width="42" height="42">
 </p>
 <br>
-<p id="muddy lemur"> <span style="color: black; font-weight: bold;"> Pingting Li </span> 
+<p > <span style="color: black; font-weight: bold;" id="muddy lemur-name"> Pingting Li </span> 
 <img id="{muddy lemur}-headshot" src="https://rstrode.fedorapeople.org/lemur.svg" alt="Pingting Li" width="42" height="42">
 </p>
 <br>
-<p id="doubtful duck"> <span style="color: black; font-weight: bold;"> Victoria Lin </span>
+<p > <span style="color: black; font-weight: bold;" id="doubtful duck-name"> Victoria Lin </span>
 <img id="{doubtful duck}-headshot" src="https://shard3.1stdibs.us.com/archivesE/1stdibs/120312/SusanWheeler//1/x-01.jpg" alt="Victoria Lin" width="42" height="42">
 </p>
 
