--- a/views/event-detail.html
+++ b/views/event-detail.html
@@ -21,4 +21,11 @@
     <input type="submit" value="Submit">
     </form>
 
+    {% if errors.length > 0 %}
+    <ul class="form-errors">
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
 {% endblock %}
