--- a/views/team-report.html
+++ b/views/team-report.html
@@ -13,7 +13,7 @@
 
 
 <h2>Burn down chart<h2>
-<img src="https://drive.google.com/file/d/0B1iluJ2NZpkpa1JRUTVfbjBNWDA/view?usp=sharing"/><br>
+<img src="http://ww4.sinaimg.cn/mw690/6d40f69cjw1epe1144bvfj20kw0ckgm5.jpg"/><br>
 
 <br>
 <p>
